<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contacts_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="io.github.afal007.ateamstask.controllers.fragment.ContactsFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/contacts_main_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_contacts"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/my_photo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_contacts_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_contacts_name"
            android:textColor="#ededed"
            android:textSize="28sp"
            android:fontFamily="sans-serif"
            android:layout_marginBottom="31dp"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintBottom_toBottomOf="@+id/iv_contacts"
            app:layout_constraintStart_toStartOf="@id/iv_contacts"
            app:layout_constraintEnd_toEndOf="@id/iv_contacts"
            app:layout_constraintLeft_toLeftOf="@+id/iv_contacts"
            app:layout_constraintRight_toRightOf="@+id/iv_contacts"
            app:layout_constraintHorizontal_bias="0.185" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_contacts" >

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_contacts_phone_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                app:srcCompat="@drawable/ic_phone_primary_color_24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/tv_contacts_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts_phone_number"
                android:textColor="@color/colorPrimaryText"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="@dimen/default_margin"
                app:layout_constraintLeft_toRightOf="@+id/iv_contacts_phone_icon"
                app:layout_constraintTop_toTopOf="parent"
                 />

            <TextView
                android:id="@+id/tv_contacts_phone_number_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts_phone_number_hint"
                android:textColor="@color/colorSecondaryText"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_marginLeft="@dimen/default_margin"
                app:layout_constraintLeft_toLeftOf="@+id/tv_contacts_phone_number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_contacts_phone_number"
                android:layout_marginStart="@dimen/default_margin" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_contacts_email_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:srcCompat="@drawable/ic_email_primary_color_24dp"
                />

            <TextView
                android:id="@+id/tv_contacts_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts_email"
                android:textColor="@color/colorPrimaryText"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="@dimen/default_margin"
                app:layout_constraintLeft_toRightOf="@+id/iv_contacts_email_icon"
                app:layout_constraintTop_toTopOf="parent"
                 />

            <TextView
                android:id="@+id/tv_contacts_email_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts_email_hint"
                android:textColor="@color/colorSecondaryText"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_marginLeft="@dimen/default_margin"
                app:layout_constraintLeft_toLeftOf="@+id/tv_contacts_email"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_contacts_email"
                android:layout_marginStart="@dimen/default_margin" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_contacts_vk_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:srcCompat="@drawable/ic_vk_primary_color_24dp"
                />

            <TextView
                android:id="@+id/tv_contacts_vk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts_vk"
                android:textColor="@color/colorPrimaryText"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="@dimen/default_margin"
                app:layout_constraintLeft_toRightOf="@+id/iv_contacts_vk_icon"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/tv_contacts_vk_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts_vk_hint"
                android:textColor="@color/colorSecondaryText"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                app:layout_constraintLeft_toLeftOf="@+id/tv_contacts_vk"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_contacts_vk" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_contacts_github_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:srcCompat="@drawable/ic_github_primary_color_24dp" />

            <TextView
                android:id="@+id/tv_contacts_github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts_github"
                android:textColor="@color/colorPrimaryText"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="@dimen/default_margin"
                app:layout_constraintLeft_toRightOf="@+id/iv_contacts_github_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_contacts_github_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts_github_hint"
                android:textColor="@color/colorSecondaryText"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                app:layout_constraintLeft_toLeftOf="@+id/tv_contacts_github"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_contacts_github" />

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>
